# football-data-rust

./: .editorconfig  Cargo.toml  README.md
.github/workflows/: build.yaml
src/: base_response.rs  client.rs  competition.rs  lib.rs
tests/: test_client.rs
